// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> applies styles correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Poppins_700Bold_Italic",
      },
      Object {
        "color": "red",
        "fontSize": 28,
      },
    ]
  }
>
  Hello world!
</Text>
`;

exports[`<Text /> renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "fontFamily": "Poppins_400Regular",
      },
      Object {},
    ]
  }
>
  Hello world!
</Text>
`;
